[package]
name = "rustnut"
version = "0.1.0"
authors = ["Garnet3106 <manage@gant.work>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
libc = "0.2.112"
num = "0.4.0"
num-derive = "0.2.0"
num-traits = "0.2.14"
rustnutlib = { path = "../rustnutlib" }
